# ##############################################################################
# Copyright (C) 2023-2024 Habana Labs, Ltd. an Intel Company
# All Rights Reserved.
#
# Unauthorized copying of this file or any element(s) within it, via any medium
# is strictly prohibited. This file contains Habana Labs, Ltd. proprietary and
# confidential information and is subject to the confidentiality and license
# agreements under which it was provided.
#
# ##############################################################################

add_habana_library(_recipe_compiler_C SHARED recipe_compiler.cpp)
target_compile_definitions(_recipe_compiler_C PRIVATE TORCH_EXTENSION_NAME=_recipe_compiler_C)
set_target_properties(_recipe_compiler_C PROPERTIES PREFIX "")
target_link_libraries(_recipe_compiler_C PUBLIC bindings torch absl::hash ${TORCH_PYTHON_LIBRARY})
install(TARGETS _recipe_compiler_C LIBRARY DESTINATION habana_torch_plugin/dynamo/compile_backend)

add_custom_command(
  OUTPUT ${CMAKE_BINARY_DIR}/generated/check_kernel_support/op_def.cpp
  COMMAND
    ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/scripts/gen_op.py
      --output_dir=${CMAKE_BINARY_DIR}/generated
      --yaml=${CMAKE_SOURCE_DIR}/scripts/hpu_op.yaml
      ${TORCH_INSTALL_PREFIX}/include/ATen/RegistrationDeclarations.h
      ${TORCH_INSTALL_PREFIX}/../torchgen/packaged/ATen/native/native_functions.yaml
      --check_kernel_support=True
  MAIN_DEPENDENCY ${CMAKE_SOURCE_DIR}/scripts/gen_op.py
  DEPENDS ${CMAKE_SOURCE_DIR}/scripts/hpu_op.yaml
          ${TORCH_INSTALL_PREFIX}/include/ATen/RegistrationDeclarations.h)

# TODO (SW-153260): fix the warnings and start compiling autogenerated files with warnings enabled again
set_source_files_properties(${CMAKE_BINARY_DIR}/generated/check_kernel_support/op_def.cpp PROPERTIES COMPILE_FLAGS -w)

add_habana_library(_shared_layer_C SHARED shared_layer_bindings.cpp
                   ${CMAKE_BINARY_DIR}/generated/check_kernel_support/op_def.cpp)
target_include_directories(
  _shared_layer_C PRIVATE ${CMAKE_BINARY_DIR}/generated/check_kernel_support
                          ${CMAKE_SOURCE_DIR}/python_packages/habana_frameworks/torch/dynamo/compile_backend)
target_compile_definitions(_shared_layer_C PRIVATE TORCH_EXTENSION_NAME=_shared_layer_C)
set_target_properties(_shared_layer_C PROPERTIES PREFIX "")
target_link_libraries(_shared_layer_C PUBLIC bindings torch absl::hash ${TORCH_PYTHON_LIBRARY})
install(TARGETS _shared_layer_C LIBRARY DESTINATION habana_torch_plugin/dynamo/compile_backend)


add_habana_library(_partition_bind_C SHARED partitioner_bind.cpp)
target_compile_definitions(_partition_bind_C PRIVATE TORCH_EXTENSION_NAME=_partition_bind_C)
set_target_properties(_partition_bind_C PROPERTIES PREFIX "")
target_link_libraries(_partition_bind_C PUBLIC bindings torch absl::hash ${TORCH_PYTHON_LIBRARY})
install(TARGETS _partition_bind_C LIBRARY DESTINATION habana_torch_plugin/dynamo/compile_backend)
