###############################################################################
#
#  Copyright (c) 2021-2024 Intel Corporation
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
###############################################################################

add_habana_library(_recipe_compiler_C SHARED recipe_compiler.cpp)
target_compile_definitions(_recipe_compiler_C PRIVATE TORCH_EXTENSION_NAME=_recipe_compiler_C)
set_target_properties(_recipe_compiler_C PROPERTIES PREFIX "")
target_link_libraries(_recipe_compiler_C PUBLIC bindings torch absl::hash ${TORCH_PYTHON_LIBRARY})
install(TARGETS _recipe_compiler_C LIBRARY DESTINATION habana_torch_plugin/${PYBIND_INSTALL_DIRNAME})

add_custom_command(
  OUTPUT ${CMAKE_BINARY_DIR}/generated/check_kernel_support/op_def.cpp
  COMMAND
    ${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/scripts/gen_op.py
      --output_dir=${CMAKE_BINARY_DIR}/generated
      --yaml=${CMAKE_SOURCE_DIR}/scripts/hpu_op.yaml
      ${TORCH_INSTALL_PREFIX}/include/ATen/RegistrationDeclarations.h
      ${TORCH_INSTALL_PREFIX}/../torchgen/packaged/ATen/native/native_functions.yaml
      --check_kernel_support=True
  MAIN_DEPENDENCY ${CMAKE_SOURCE_DIR}/scripts/gen_op.py
  DEPENDS ${CMAKE_SOURCE_DIR}/scripts/hpu_op.yaml
          ${TORCH_INSTALL_PREFIX}/include/ATen/RegistrationDeclarations.h)

# TODO (SW-153260): fix the warnings and start compiling autogenerated files with warnings enabled again
set_source_files_properties(${CMAKE_BINARY_DIR}/generated/check_kernel_support/op_def.cpp PROPERTIES COMPILE_FLAGS -w)

add_habana_library(_shared_layer_C SHARED shared_layer_bindings.cpp
                   ${CMAKE_BINARY_DIR}/generated/check_kernel_support/op_def.cpp)
target_include_directories(
  _shared_layer_C PRIVATE ${CMAKE_BINARY_DIR}/generated/check_kernel_support
                          ${CMAKE_SOURCE_DIR}/python_packages/habana_frameworks/torch/dynamo/compile_backend)
target_compile_definitions(_shared_layer_C PRIVATE TORCH_EXTENSION_NAME=_shared_layer_C)
set_target_properties(_shared_layer_C PROPERTIES PREFIX "")
target_link_libraries(_shared_layer_C PUBLIC bindings torch absl::hash ${TORCH_PYTHON_LIBRARY})
install(TARGETS _shared_layer_C LIBRARY DESTINATION habana_torch_plugin/${PYBIND_INSTALL_DIRNAME})


add_habana_library(_partition_bind_C SHARED partitioner_bind.cpp)
target_compile_definitions(_partition_bind_C PRIVATE TORCH_EXTENSION_NAME=_partition_bind_C)
set_target_properties(_partition_bind_C PROPERTIES PREFIX "")
target_link_libraries(_partition_bind_C PUBLIC bindings torch absl::hash ${TORCH_PYTHON_LIBRARY})
install(TARGETS _partition_bind_C LIBRARY DESTINATION habana_torch_plugin/${PYBIND_INSTALL_DIRNAME})
